--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=localhost
-DB_PORT=6666
-DB_DATABASE=laravelcasus
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_CONNECTION=mysql
+DB_HOST=ryanstronks.gc-webhosting.nl
+DB_PORT=3306
+DB_DATABASE=ryanstronks_LaravelAPI
+DB_USERNAME=
+DB_PASSWORD=
 
 DB_CHARSET=utf8
 DB_COLLATION=utf8_unicode_ci
