--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ibWpdoTi+NTuqEE3OpsioMS3nho6M09UvxEL4Xar7u4=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
